--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	 <body>
 	    <header>
 			<div class="logo">
-			<img src="assets/icon/partner.png" alt="logo" class="logo-img" />
+			<img src="assets/icon/partner.png" alt="logo" class="logo-img" >
 			<h1 class="logo-title">AJI X</h1>
 			</div>
 			
@@ -25,7 +25,7 @@
 				<div class="intro">
 					<p class="title">Hello, Aji Pradipta Here!</p>
 					<p class="description">Technology Influencer From Village.</p>
-					<img src="assets/foto/miawaug.jpg" alt="miawaug" class="img-foto"/>
+					<img src="assets/foto/miawaug.jpg" alt="miawaug" class="img-foto">
 				</div>
 		</div>
 		<div class="parallax">	
