--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<p class="card-description">Servis nonstop ketika anda membutuhkan bantuan.</p>
 							</div>
 							<div class="card-item">
-							<img src="assets/icon/hot-deal.png" alt="icon 2" class="icon">
+							<img src="assets/icon/hot-deal.png" alt="icon " class="icon">
 							<p class="card-title">Jasa paling murah</p>
 							<p class="card-description">Biaya jasa yang saya berikan pasti murah dan terjamin.</p>
 							</div>
