--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	 <body>
 	    <header>
 			<div class="logo">
-			<img src="assets/icon/partner.png" alt="logo" class="logo-img">
+			<img src="Assets/Icon/partner.png" alt="logo" class="logo-img">
 			<h1 class="logo-title">AJI X</h1>
 			</div>
 			
@@ -25,7 +25,7 @@
 				<div class="intro">
 					<p class="title">Hello, Aji Pradipta Here!</p>
 					<p class="description">Technology Influencer From Village.</p>
-					<img src="assets/foto/miawaug.jpg" alt="miawaug" class="img-foto">
+					<img src="Assets/Foto/miawaug.jpg" alt="miawaug" class="img-foto">
 				</div>
 		</div>
 		<div class="parallax">	
@@ -39,17 +39,17 @@
 			<div class="container">
 					<div class="card"id ="jasa">
 							<div class="card-item">
-							<img src="assets/icon/24-hours.png" alt="icon 1" class="icon">
+							<img src="Assets/Icon/24-hours.png" alt="icon 1" class="icon">
 							<p class="card-title">Pelayanan Nonstop</p>
 							<p class="card-description">Servis nonstop ketika anda membutuhkan bantuan.</p>
 							</div>
 							<div class="card-item">
-							<img src="assets/icon/hot-deal.png" alt="icon 2" class="icon">
+							<img src="Assets/Icon/hot-deal.png" alt="icon 2" class="icon">
 							<p class="card-title">Jasa paling murah</p>
 							<p class="card-description">Biaya jasa yang saya berikan pasti murah dan terjamin.</p>
 							</div>
 							<div class="card-item">
-							<img src="assets/icon/rating.png" alt="icon 3" class="icon">
+							<img src="Assets/Icon/rating.png" alt="icon 3" class="icon">
 							<p class="card-title">684 Review</p>
 							<p class="card-description">Mereka senang dalam kerja sama dengan saya.</p>
 							</div>
